Like Post, Comment; Fix Relative Path, Fix Signup
