# app/controllers/auth.controller.js
@@ -19,6 +19,18 @@ require("dotenv").config();
 
 exports.authController = {
   login: async (req, res) => {
+    /* #swagger.tags = ['Auth'] 
+    #swagger.description = 'Endpoint to login.'
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "multipart/form-data": {
+          schema: {
+            $ref: "#/definitions/SignIn"
+          }
+        }
+      }
+    } */
     const accessToken = req.accessToken;
     const refreshToken = req.refreshToken;
     const user = req.user;
@@ -31,6 +43,48 @@ exports.authController = {
   },
 
   register: async (req, res) => {
+    /*#swagger.tags = ['Auth']
+    #swagger.description = 'Endpoint to register account.'
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "multipart/form-data": {
+          schema: {
+            "type": "object",
+            "properties": {
+              "full_name": {
+                "type": "string",
+                "example": "Nguyen Van A"
+              },
+              "email": {
+                "type": "string",
+                "example": "nguyenvana@gmail.com"
+              },
+              "password": {
+                "type": "string",
+                "example": "Abc123!@#"
+              },
+              "date_of_birth": {
+                "type": "string",
+                "example": "2000-01-01"
+              },
+              "avatar": {
+                "type": "string",
+                "format": "binary"
+              }
+            },
+            "required": [
+              "full_name",
+              "email",
+              "password",
+              "date_of_birth",
+              "avatar"
+            ]
+          }
+        }
+      }
+    }
+  */
     let { email, full_name, password, date_of_birth } = req.body;
     const avatar = req.file;
     if (!avatar) {
@@ -65,10 +119,10 @@ exports.authController = {
       }
       const accessToken = authServices.generateToken(
         {
-          exp: Math.floor(Date.now() / 1000) + 120 * 60,
           _id: user_id,
         },
-        process.env.ACCESS_TOKEN_SECRET
+        process.env.ACCESS_TOKEN_SECRET,
+        process.env.ACCESS_TOKEN_LIFE.toString()
       );
       return res.status(HTTPStatusCode.OK).json({
         message: "Register successful",
@@ -123,7 +177,8 @@ exports.authController = {
     }
     const accessToken = authServices.generateToken(
       payload,
-      process.env.ACCESS_TOKEN_SECRET
+      process.env.ACCESS_TOKEN_SECRET,
+      process.env.ACCESS_TOKEN_LIFE.toString()
     );
     if (!accessToken) {
       return res
